--- a/index.html
+++ b/index.html
@@ -2,30 +2,57 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Form Input & Data Tabel</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Form ke Spreadsheet</title>
+  <style>
+    body { font-family: sans-serif; max-width: 600px; margin: 2rem auto; }
+    input, textarea { width: 100%; padding: 0.5rem; margin: 0.5rem 0; }
+    button { padding: 0.6rem 1rem; background: #1976d2; color: white; border: none; cursor: pointer; }
+  </style>
 </head>
 <body>
-  <h1>Formulir Input Data</h1>
-  <form id="form">
-    <input type="text" id="nama" placeholder="Nama" required>
-    <input type="email" id="email" placeholder="Email" required>
-    <textarea id="pesan" placeholder="Pesan" required></textarea>
+  <h2>Form Kontak</h2>
+  <form id="form-kontak">
+    <label>Nama:</label>
+    <input type="text" name="nama" required>
+
+    <label>Email:</label>
+    <input type="email" name="email" required>
+
+    <label>Pesan:</label>
+    <textarea name="pesan" rows="4" required></textarea>
+
     <button type="submit">Kirim</button>
   </form>
 
-  <h2>Data dari Spreadsheet</h2>
-  <table id="data-table">
-    <thead>
-      <tr>
-        <th>Nama</th>
-        <th>Email</th>
-        <th>Pesan</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <p id="status"></p>
 
-  <script src="app.js"></script>
+  <script>
+    const API_URL = 'https://script.google.com/macros/s/PASTE_LINK_WEB_APP/exec'; // 🔁 Ganti ini dengan link Web App kamu
+
+    document.getElementById('form-kontak').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const form = e.target;
+      const data = {
+        nama: form.nama.value,
+        email: form.email.value,
+        pesan: form.pesan.value
+      };
+
+      try {
+        const res = await fetch(API_URL, {
+          method: 'POST',
+          body: JSON.stringify(data),
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        });
+
+        document.getElementById('status').textContent = 'Data berhasil dikirim!';
+        form.reset();
+      } catch (error) {
+        document.getElementById('status').textContent = 'Gagal mengirim data.';
+      }
+    });
+  </script>
 </body>
 </html>
