--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p id="status"></p>
 
   <script>
-    const API_URL = 'https://script.google.com/macros/s/AKfycbxxFnkYIOg-mf25kO7UwjANNFnJ0IJV0_sG0-dCAbkceHG7U5CucdpUjNsSgnMqL1k_tg/exec'; // 🔁 Ganti ini dengan link Web App kamu
+    const API_URL = https://script.google.com/macros/s/AKfycbxOQ0eOgSxJg7G-QNQI8XIq3L9-Ve3ENXLUTrB9r0dEQydEkokTDnI3fiCO4iUw41G2iw/exec; // 🔁 Ganti ini dengan link Web App kamu
 
     document.getElementById('form-kontak').addEventListener('submit', async (e) => {
       e.preventDefault();
